# Langchain-con-Ollama

./: README.md  chat.py  local_rag.ipynb  pyproject.toml  upload_data.py
